--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -36,13 +36,13 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="추천 검색어"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="40dp"
         android:fontFamily="@font/notosans_bold"
+        android:text="추천 검색어"
         android:textColor="#000000"
         android:textSize="20dp"
-        android:textStyle="bold"
-        android:layout_marginTop="20dp"
-        android:layout_marginStart="10dp"/>
+        android:textStyle="bold" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -54,9 +54,8 @@
             android:layout_width="190dp"
             android:layout_height="270dp"
             android:layout_marginStart="10dp"
-            android:layout_marginTop="30dp"
             android:layout_marginEnd="10dp"
-            android:layout_marginBottom="113dp"
+            android:layout_marginBottom="150dp"
             android:background="@drawable/imageround"
             android:src="@drawable/sonny"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -69,9 +68,8 @@
             android:layout_width="190dp"
             android:layout_height="270dp"
             android:layout_marginStart="10dp"
-            android:layout_marginTop="30dp"
             android:layout_marginEnd="1dp"
-            android:layout_marginBottom="113dp"
+            android:layout_marginBottom="150dp"
             android:background="@drawable/imageround"
             android:src="@drawable/search_image1"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -83,7 +81,7 @@
             android:id="@+id/frame1"
             android:layout_width="190dp"
             android:layout_height="270dp"
-            android:layout_marginTop="64dp"
+            android:layout_marginTop="20dp"
             android:background="@drawable/frameround"
             android:clickable="true"
             android:elevation="10dp"
@@ -132,13 +130,13 @@
             android:id="@+id/frame2"
             android:layout_width="188dp"
             android:layout_height="270dp"
-            android:layout_marginTop="64dp"
+            android:layout_marginTop="20dp"
             android:background="@drawable/frameround"
             android:clickable="true"
             android:elevation="10dp"
             android:focusable="true"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.959"
+            app:layout_constraintHorizontal_bias="0.968"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
