--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -1,73 +1,167 @@
-<?xml version="1.0" encoding="utf-8"?>
-
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/linearLayout4"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/grey1"
-    android:orientation="vertical"
-    tools:context=".MainActivity">
+    android:background="@color/grey2">
+
+
+    <ImageView
+        android:id="@+id/backspace_icon"
+        android:layout_width="23dp"
+        android:layout_height="23dp"
+        android:layout_marginTop="20dp"
+        app:layout_constraintBottom_toTopOf="@+id/settings"
+        app:layout_constraintEnd_toStartOf="@+id/app_name"
+        app:layout_constraintHorizontal_bias="0.4"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.05"
+        app:srcCompat="@drawable/backspace_icon" />
 
     <TextView
-        android:layout_width="wrap_content"
+        android:id="@+id/app_name"
+        android:layout_width="116dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20sp"
+        android:layout_marginStart="50dp"
         android:layout_marginTop="20dp"
         android:fontFamily="@font/app_name"
         android:text="Pot,Folio"
         android:textColor="#000000"
         android:textSize="25dp"
-        android:textStyle="bold" />
-
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
-
-        android:layout_width="360dp"
-        android:layout_height="513dp"
-        android:layout_gravity="center"
+        android:id="@+id/settings"
+        android:layout_width="match_parent"
+        android:layout_height="500dp"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="50dp"
-        android:layout_marginBottom="30dp"
-        android:background="@color/white"
-        android:orientation="vertical">
+        android:layout_marginEnd="10dp"
+        android:background="@drawable/round_white"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/app_name">
 
         <TextView
-            android:id="@+id/textView8"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="20dp"
-            android:fontFamily="@font/notosans_medium"
-            android:text="Settigs"
-            android:textColor="@color/black"
-            android:textSize="30dp"
-            android:textStyle="bold" />
+            android:id="@+id/Settings_text"
+            android:layout_width="158dp"
+            android:layout_height="67dp"
+            android:layout_marginStart="20dp"
+            android:fontFamily="@font/notosans_kr_bold"
+            android:text="Settings"
+            android:textColor="#000000"
+            android:textSize="30sp" />
 
-        <Button
-            android:id="@+id/expain_btn"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="80dp"
-            android:layout_marginLeft="5dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginRight="5dp"
-            android:background="@color/grey1"
-            android:text="   이용약관"
-            android:textAlignment="textStart"
-            android:textSize="18sp" />
+            android:orientation="horizontal">
 
-        <Button
-            android:id="@+id/passwordchange_btn"
+            <ImageView
+                android:id="@+id/expain_icon"
+                android:layout_width="20dp"
+                android:layout_height="25dp"
+                android:layout_gravity="center"
+                android:layout_marginStart="18dp"
+                android:scaleType="fitStart"
+                app:srcCompat="@drawable/expain_icon" />
+
+
+            <Button
+                android:id="@+id/expain_text"
+                android:layout_width="258dp"
+                android:layout_height="80dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
+                android:background="@null"
+                android:fontFamily="@font/notosans_kr_medium"
+                android:text="이용약관"
+                android:textAlignment="textStart"
+                android:textSize="18sp" />
+
+            <ImageView
+                android:id="@+id/backspace_icon2"
+                android:layout_width="23dp"
+                android:layout_height="23dp"
+                android:layout_marginTop="30dp"
+                android:background="#FFFFFF"
+                android:foregroundTint="@color/navy"
+                android:layout_marginLeft="20dp"
+                android:rotation="180"
+                android:rotationY="0"
+                android:tint="@color/navy"
+                app:srcCompat="@drawable/backspace_icon" />
+
+        </LinearLayout>
+
+        <ImageView
+            android:layout_width="350dp"
+            android:layout_height="5dp"
+            android:layout_gravity="center"
+            android:background="@drawable/underline_card" />
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="80dp"
-            android:layout_marginLeft="5dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginRight="5dp"
-            android:background="@color/grey1"
-            android:text="   비밀번호 변경"
-            android:textAlignment="textStart"
-            android:textSize="18sp" />
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/password_ch_icon"
+                android:layout_width="20dp"
+                android:layout_height="25dp"
+                android:layout_gravity="center"
+                android:layout_marginStart="20dp"
+                android:scaleType="fitStart"
+                app:srcCompat="@drawable/password__icon" />
+
+            <Button
+                android:id="@+id/password_ch_text"
+                android:layout_width="257dp"
+                android:layout_height="80dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
+                android:background="@null"
+                android:fontFamily="@font/notosans_kr_medium"
+                android:text="비밀번호 변경"
+                android:textAlignment="textStart"
+                android:textSize="18sp" />
+
+            <ImageView
+                android:id="@+id/backspace_icon3"
+                android:layout_width="23dp"
+                android:layout_height="23dp"
+                android:layout_marginTop="30dp"
+                android:layout_marginLeft="20dp"
+                android:rotation="180"
+                android:rotationY="0"
+                android:tint="@color/navy"
+                app:srcCompat="@drawable/backspace_icon" />
+
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/btnLog"
+            android:layout_width="224dp"
+            android:layout_height="35dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="150dp"
+            android:background="@drawable/roundbutton_navy"
+            android:fontFamily="@font/notosans_bold"
+            android:text="로그아웃"
+            android:textColor="@color/white"
+            android:textSize="15dp" />
 
     </LinearLayout>
 
 
-</LinearLayout>
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
