--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -44,7 +43,7 @@
             android:textStyle="bold" />
 
         <Button
-            android:id="@+id/expain_btn"
+            android:id="@+id/explain_btn"
             android:layout_width="match_parent"
             android:layout_height="80dp"
             android:layout_marginLeft="5dp"
