--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -1,8 +1,7 @@
-<?xml version="1.0" encoding="utf-8"?>
-
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/linearLayout4"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/grey2">
@@ -40,7 +39,7 @@
         android:layout_width="match_parent"
         android:layout_height="500dp"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="30dp"
         android:layout_marginEnd="10dp"
         android:background="@drawable/round_white"
         android:orientation="vertical"
@@ -74,7 +73,7 @@
 
 
             <Button
-                android:id="@+id/expain_text"
+                android:id="@+id/explain_btn"
                 android:layout_width="258dp"
                 android:layout_height="80dp"
                 android:layout_marginStart="10dp"
@@ -89,10 +88,10 @@
                 android:id="@+id/backspace_icon2"
                 android:layout_width="23dp"
                 android:layout_height="23dp"
+                android:layout_marginLeft="20dp"
                 android:layout_marginTop="30dp"
                 android:background="#FFFFFF"
                 android:foregroundTint="@color/navy"
-                android:layout_marginLeft="20dp"
                 android:rotation="180"
                 android:rotationY="0"
                 android:tint="@color/navy"
@@ -121,7 +120,7 @@
                 app:srcCompat="@drawable/password__icon" />
 
             <Button
-                android:id="@+id/password_ch_text"
+                android:id="@+id/passwordchange_btn"
                 android:layout_width="257dp"
                 android:layout_height="80dp"
                 android:layout_marginStart="10dp"
@@ -136,8 +135,8 @@
                 android:id="@+id/backspace_icon3"
                 android:layout_width="23dp"
                 android:layout_height="23dp"
-                android:layout_marginTop="30dp"
                 android:layout_marginLeft="20dp"
+                android:layout_marginTop="30dp"
                 android:rotation="180"
                 android:rotationY="0"
                 android:tint="@color/navy"
@@ -156,6 +155,7 @@
             android:text="로그아웃"
             android:textColor="@color/white"
             android:textSize="15dp" />
+
     </LinearLayout>
 
 
