마이페이지: 이미지 미리보기

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,7 +28,8 @@
         app:menu="@menu/bottom_menu"
         app:itemBackground="@android:color/white"
         app:itemIconTint="#FF000000"
-        app:itemTextColor="#FF000000">
+        app:itemTextColor="#FF000000"
+        >
     </com.google.android.material.bottomnavigation.BottomNavigationView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
