--- a/app/src/main/res/layout/fragment_my_page.xml
+++ b/app/src/main/res/layout/fragment_my_page.xml
@@ -199,20 +199,18 @@
         android:elevation="10dp"
         android:src="@drawable/profile1"/>
 
-
-    <ImageButton
-        android:id="@+id/imageButton4"
-        android:layout_width="180dp"
-        android:layout_height="200dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="11dp"
-        android:layout_marginEnd="22dp"
-        android:layout_marginBottom="78dp"
-        android:src="@drawable/ic_baseline_folder_open_24"
+    <GridView
+        android:id="@+id/gridview"
+        android:layout_width="377dp"
+        android:layout_height="283dp"
+        android:numColumns="2"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/imageButton5"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.47"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView10" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
+
 
     <!--    <androidx.cardview.widget.CardView-->
     <!--        xmlns:android="http://schemas.android.com/apk/res/android"-->
@@ -233,20 +231,6 @@
     <!--            app:riv_mutate_background="true"-->
     <!--            app:riv_oval="false" />-->
     <!--    </androidx.cardview.widget.CardView>-->
-
-    <ImageButton
-        android:id="@+id/imageButton5"
-        android:layout_width="180dp"
-        android:layout_height="200dp"
-        android:layout_marginStart="208dp"
-        android:layout_marginTop="80dp"
-        android:layout_marginEnd="12dp"
-        android:layout_marginBottom="78dp"
-        android:src="@drawable/ic_baseline_folder_open_24"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
