--- a/app/src/main/res/layout/custom_grid_item.xml
+++ b/app/src/main/res/layout/custom_grid_item.xml
@@ -2,9 +2,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <ImageView android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:id="@+id/itemimgview"
+    <ImageView
+        android:id="@+id/item_img"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_weight="1" />
 
 </LinearLayout>
