비밀번호 변경 부분 완성 + 데이터베이스 수정

--- a/app/src/main/res/layout/activity_password.xml
+++ b/app/src/main/res/layout/activity_password.xml
@@ -15,21 +15,25 @@
         android:textSize="20dp"/>
 
     <EditText
+        android:id="@+id/id_confirm"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="아이디 확인이 필요합니다"/>
 
     <EditText
+        android:id="@+id/pre_pass"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="기존의 비밀번호를 입력해주세요"/>
 
     <EditText
+        android:id="@+id/new_pass"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="새로운 비밀번호를 입력해주세요"/>
 
     <Button
+        android:id="@+id/pass_complete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="비밀번호 변경"/>
