하단바 텍스트 제거+비밀번호변경 화면 수정
+) 실행이 안되는 문제 발생 (실행화면 확인 불가)

--- a/app/src/main/res/layout/activity_card_change.xml
+++ b/app/src/main/res/layout/activity_card_change.xml
@@ -76,6 +76,7 @@
                 android:layout_marginTop="10dp"
                 android:elevation="10dp"
                 android:src="@drawable/profile1"
+                android:layout_gravity="center"
                 app:civ_border_overlay="true"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
