--- a/app/src/main/res/layout/activity_password.xml
+++ b/app/src/main/res/layout/activity_password.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,37 +9,25 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="78dp"
-        android:orientation="horizontal"
-        android:layout_marginTop="10dp"
-        android:padding="10dp">
-
-        <Button
-            style="@style/Widget.AppCompat.Button.Borderless"
-            android:layout_width="53dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="취소"
-            android:textAlignment="center"
-            android:textColor="@color/black"
-            android:textSize="16sp"
-            android:textStyle="bold" />
+        android:orientation="horizontal">
 
         <TextView
-            android:layout_width="243dp"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:layout_weight="4"
-            android:text="비밀번호 변경"
-            android:textAlignment="center"
-            android:textColor="@color/black"
-            android:textSize="18sp"
-            android:textStyle="bold" />
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="20dp"
+            android:fontFamily="@font/app_name"
+            android:text="Pot,Folio"
+            android:textColor="#000000"
+            android:textSize="25dp"
+            android:textStyle="bold"/>
 
         <Button
             android:id="@+id/pass_complete"
             style="@style/Widget.AppCompat.Button.Borderless"
-            android:layout_width="53dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_marginTop="20dp"
             android:backgroundTint="#FFFFFF"
             android:clickable="true"
             android:focusable="true"
@@ -50,7 +39,23 @@
 
     </LinearLayout>
 
-  
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="40dp">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_gravity="center"
+            android:gravity="fill_vertical"
+            android:text="비밀번호 변경"
+            android:layout_marginStart="20dp"
+            android:fontFamily="@font/notosans_kr_black"
+            android:textColor="@color/black"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+    </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="70dp">
@@ -59,7 +64,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginStart="17dp"
+            android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
             android:text="아이디 확인"
             android:textColor="@color/black"
@@ -86,7 +91,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginStart="17dp"
+            android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
             android:text="기존 비밀번호"
             android:textColor="@color/black"
@@ -114,7 +119,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginStart="17dp"
+            android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
             android:text="새 비밀번호"
             android:textColor="@color/black"
