--- a/app/src/main/res/layout/activity_password.xml
+++ b/app/src/main/res/layout/activity_password.xml
@@ -12,48 +12,33 @@
         android:orientation="horizontal">
 
         <TextView
-            android:layout_width="300dp"
+            android:layout_width="243dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="20dp"
-            android:fontFamily="@font/app_name"
-            android:text="Pot,Folio"
-            android:textColor="#000000"
-            android:textSize="25dp"
-            android:textStyle="bold"/>
+            android:layout_weight="4"
+            android:text="비밀번호 변경"
+            android:layout_gravity="center"
+            android:textColor="@color/black"
+            android:layout_marginLeft="10dp"
+            android:textSize="20dp"
+            android:textStyle="bold"
+            android:fontFamily="@font/notosans_kr_black"/>
 
         <Button
             android:id="@+id/pass_complete"
-            style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:backgroundTint="#FFFFFF"
+            android:layout_weight="1"
+            android:layout_marginEnd="10dp"
+            android:background="@drawable/roundbutton_point_orange"
             android:clickable="true"
             android:focusable="true"
             android:text="변경"
-            android:textAlignment="center"
-            android:textColor="@color/point_orange"
-            android:textSize="16sp"
-            android:textStyle="bold" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="40dp">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
             android:layout_gravity="center"
-            android:gravity="fill_vertical"
-            android:text="비밀번호 변경"
-            android:layout_marginStart="20dp"
-            android:fontFamily="@font/notosans_kr_black"
-            android:textColor="@color/black"
-            android:textSize="18sp"
-            android:textStyle="bold" />
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:fontFamily="@font/notosans_kr_black"/>
+
     </LinearLayout>
 
     <LinearLayout
