--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -55,33 +55,37 @@
         android:layout_height="match_parent"
         android:orientation="horizontal">
 
-        <ImageView
+        <com.makeramen.roundedimageview.RoundedImageView
             android:id="@+id/imageView"
             android:layout_width="190dp"
             android:layout_height="270dp"
+            android:layout_marginTop="20dp"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
             android:layout_marginBottom="150dp"
             android:background="@drawable/imageround"
             android:src="@drawable/sonny"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:riv_corner_radius="20dp"
             app:layout_constraintEnd_toStartOf="@+id/imageView2"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            android:scaleType="centerCrop" />
 
-        <ImageView
+        <com.makeramen.roundedimageview.RoundedImageView
             android:id="@+id/imageView2"
             android:layout_width="190dp"
             android:layout_height="270dp"
+            android:layout_marginTop="20dp"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="1dp"
             android:layout_marginBottom="150dp"
+            app:riv_corner_radius="20dp"
             android:background="@drawable/imageround"
             android:src="@drawable/search_image1"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/frame2"
             app:layout_constraintStart_toEndOf="@+id/imageView"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            android:scaleType="centerCrop" />
 
         <FrameLayout
             android:id="@+id/frame1"
@@ -90,7 +94,7 @@
             android:layout_marginTop="20dp"
             android:background="@drawable/frameround"
             android:clickable="true"
-            android:elevation="10dp"
+            android:elevation="5dp"
             android:focusable="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.031"
@@ -139,7 +143,7 @@
             android:layout_marginTop="20dp"
             android:background="@drawable/frameround"
             android:clickable="true"
-            android:elevation="10dp"
+            android:elevation="5dp"
             android:focusable="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.968"
