액티비티->프래그먼트로 수정 + 프로필 이미지 연결

--- a/app/src/main/res/layout/fragment_my_page.xml
+++ b/app/src/main/res/layout/fragment_my_page.xml
@@ -184,7 +184,7 @@
 
 
     <com.makeramen.roundedimageview.RoundedImageView
-        android:id="@+id/profile_camera"
+        android:id="@+id/profile"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_marginTop="50dp"
