--- a/app/src/main/res/layout/fragment_change.xml
+++ b/app/src/main/res/layout/fragment_change.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFFFFF"
-    tools:context=".CardChangeActivity">
+    tools:context=".ChangeFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -83,15 +83,45 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:riv_border_color="@color/white"
                 app:riv_border_width="5dp"
-                app:riv_corner_radius="100dp" />
+                app:riv_corner_radius="100dp"
+                android:clickable="true"
+                android:focusableInTouchMode="true"/>
 
         </LinearLayout>
 
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="60dp">
+
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginStart="15dp"
+                android:layout_marginEnd="20dp"
+                android:text="이름 확인"
+                android:textColor="@color/black"
+                android:textSize="18dp"
+                android:textStyle="bold" />
+
+            <EditText
+                android:id="@+id/change_name"
+                android:layout_width="287dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="20dp"
+                android:background="@null"
+                android:hint="이름을 확인해주세요."
+                android:textSize="15sp" />
+
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="70dp">
+            android:layout_height="60dp">
 
 
             <TextView
@@ -124,7 +154,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="70dp">
+            android:layout_height="60dp">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -155,7 +185,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="70dp">
+            android:layout_height="60dp">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -185,7 +215,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="70dp">
+            android:layout_height="60dp">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -216,7 +246,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="70dp">
+            android:layout_height="60dp">
 
             <TextView
                 android:layout_width="wrap_content"
