--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -145,7 +145,7 @@
         </LinearLayout>
 
         <Button
-            android:id="@+id/btnLog"
+            android:id="@+id/btnLogOut"
             android:layout_width="224dp"
             android:layout_height="35dp"
             android:layout_gravity="center"
