--- a/app/src/main/res/layout/fragment_my_page.xml
+++ b/app/src/main/res/layout/fragment_my_page.xml
@@ -197,6 +197,7 @@
         app:riv_border_width="5dp"
         app:riv_border_color="@color/white"
         android:elevation="10dp"
+        android:scaleType="centerCrop"
         android:src="@drawable/profile1"/>
 
     <GridView
