--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -10,13 +10,11 @@
     tools:context=".MainActivity">
 
     <ImageView
-        android:id="@+id/imageView8"
+        android:id="@+id/logo_signup"
         android:layout_width="92dp"
         android:layout_height="105dp"
-        android:layout_marginTop="100dp"
         android:layout_gravity="center"
-
-        app:srcCompat="@drawable/logo_red" />
+        android:layout_marginTop="100dp"/>
 
     <TextView
         android:id="@+id/AppName_login"
