--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -8,20 +8,37 @@
     android:background="@color/point_orange"
     android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/logo_start"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
+
+
+
+
+
+
+
+    <FrameLayout
+        android:id="@+id/frame1"
+        android:layout_width="165dp"
+        android:layout_height="165dp"
         android:layout_gravity="center"
-        android:layout_marginTop="150dp"
-        android:src="@drawable/logo_blue"/>
+        android:layout_marginTop="120dp"
+        android:focusable="true"
+        android:background="@drawable/start_background"
+        >
+
+        <ImageView
+            android:id="@+id/logo_start"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:layout_gravity="center"/>
+
+    </FrameLayout>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="00dp"
         android:fontFamily="@font/app_name"
+        android:layout_marginTop="20dp"
         android:text="Pot, Folio"
         android:textColor="#FFFFFF"
         android:textSize="40dp" />
@@ -41,13 +58,14 @@
         android:layout_width="150dp"
         android:layout_height="45dp"
         android:layout_gravity="center"
+        android:gravity="center"
         android:layout_marginTop="100dp"
         android:background="@drawable/roundbutton_white"
         android:backgroundTint="#E8E8E8"
         android:fontFamily="@font/notosans_kr_bold"
         android:text="시작하기"
         android:textAlignment="center"
-        android:textColor="#4E5464"
+        android:textColor="@color/navy"
         android:textSize="18dp" />
 
 
