--- a/app/src/main/res/layout/fragment_change.xml
+++ b/app/src/main/res/layout/fragment_change.xml
@@ -44,22 +44,24 @@
                 android:textAlignment="center"
                 android:textColor="@color/black"
                 android:textSize="18sp"
+                android:fontFamily="@font/notosans_kr_black"
                 android:textStyle="bold" />
 
             <Button
                 android:id="@+id/card_save"
-                style="@style/Widget.AppCompat.Button.Borderless"
-                android:layout_width="53dp"
-                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:layout_height="45dp"
                 android:layout_weight="1"
-                android:backgroundTint="#FFFFFF"
+                android:background="@drawable/roundbutton_point_orange"
                 android:clickable="true"
                 android:focusable="true"
                 android:text="저장"
                 android:textAlignment="center"
-                android:textColor="@color/point_orange"
+                android:textColor="@color/white"
                 android:textSize="16sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:fontFamily="@font/notosans_kr_black"/>
+
 
         </LinearLayout>
 
@@ -77,7 +79,6 @@
                 android:elevation="10dp"
                 android:src="@drawable/profile1"
                 android:layout_gravity="center"
-                app:civ_border_overlay="true"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
