--- a/app/src/main/res/layout/fragment_change.xml
+++ b/app/src/main/res/layout/fragment_change.xml
@@ -24,28 +24,17 @@
             android:layout_marginTop="10dp"
             android:padding="10dp">
 
-            <Button
-                android:id="@+id/card_back"
-                style="@style/Widget.AppCompat.Button.Borderless"
-                android:layout_width="53dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="취소"
-                android:textAlignment="center"
-                android:textColor="@color/black"
-                android:textSize="16sp"
-                android:textStyle="bold" />
-
             <TextView
                 android:layout_width="243dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="4"
                 android:text="명함 편집"
-                android:textAlignment="center"
+                android:textAlignment="textStart"
                 android:textColor="@color/black"
-                android:textSize="18sp"
-                android:fontFamily="@font/notosans_kr_black"
-                android:textStyle="bold" />
+                android:layout_marginLeft="10dp"
+                android:textSize="20dp"
+                android:textStyle="bold"
+                android:fontFamily="@font/notosans_kr_black" />
 
             <Button
                 android:id="@+id/card_save"
