명함 수정 부분 UI수정, 비번변경 마진 수정
이미지 추가할 수 있는것처럼 보이도록 수정,
두 페이지 제목 마진 맞춤

--- a/app/src/main/res/layout/fragment_change.xml
+++ b/app/src/main/res/layout/fragment_change.xml
@@ -66,12 +66,12 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="10dp"
                 android:elevation="10dp"
-                android:src="@drawable/profile1"
+                android:src="@drawable/profile_change"
                 android:layout_gravity="center"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:riv_border_color="@color/white"
+                app:riv_border_color="@color/grey2"
                 app:riv_border_width="5dp"
                 app:riv_corner_radius="100dp"
                 android:clickable="true"
