--- a/app/src/main/res/layout/custom_grid_item.xml
+++ b/app/src/main/res/layout/custom_grid_item.xml
@@ -6,6 +6,7 @@
         android:id="@+id/item_img"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1" />
+        android:layout_weight="1"
+        />
 
 </LinearLayout>
