--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -10,8 +10,8 @@
 
     <FrameLayout
         android:id="@+id/frame1"
-        android:layout_width="165dp"
-        android:layout_height="165dp"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:layout_gravity="center"
         android:layout_marginTop="120dp"
         android:focusable="true"
@@ -20,8 +20,8 @@
 
         <ImageView
             android:id="@+id/logo_start"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:layout_gravity="center"/>
 
     </FrameLayout>
@@ -31,7 +31,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:fontFamily="@font/app_name"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:text="Pot, Folio"
         android:textColor="#FFFFFF"
         android:textSize="40dp" />
@@ -40,7 +40,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="10dp"
         android:text="나를 담다."
         android:textAlignment="center"
         android:textColor="#FFFFFF"
@@ -48,14 +47,14 @@
 
     <Button
         android:id="@+id/btnStart"
-        android:layout_width="150dp"
+        android:layout_width="245dp"
         android:layout_height="45dp"
         android:layout_gravity="center"
         android:gravity="center"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="150dp"
         android:background="@drawable/roundbutton_white"
         android:backgroundTint="#E8E8E8"
-        android:fontFamily="@font/notosans_kr_bold"
+        android:textStyle="bold"
         android:text="시작하기"
         android:textAlignment="center"
         android:textColor="@color/navy"
