--- a/app/src/main/res/layout/fragment_my_page.xml
+++ b/app/src/main/res/layout/fragment_my_page.xml
@@ -35,7 +35,7 @@
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="605dp"
         android:backgroundTint="#00FFFFFF"
-        android:src="@drawable/ic_outline_settings_24"
+        android:src="@drawable/ic_setting"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/app_name"
